# affinityprop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: affinity_propagation.rs  algorithm.rs  array.rs  lib.rs  main.rs  ops.rs  preference.rs  similarity.rs
tests/: external_datasets.rs  generate_data.py  generate_ig.py  integration.rs  normal.rs  simple.rs
tests/data/: near-exemplar-10.test  near-exemplar-100.test
tests/test-data/: assembly.log.cov.x100.lognorm  binsanity.2.test  binsanity.test  breast_cancer.test  diabetes.test  digits.test  iris.test  near-exemplar-10.test  near-exemplar-50.test  precalculated.test  precalculated.with-ids.test
