[package]
name = "affinityprop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.4", features = ["rayon"] }
rayon = "1.5"
clap = "~2.27.0"
num-traits = "0.2.14"

[dev-dependencies]
tempfile = "3"
