[package]
name = "affinityprop"
version = "0.1.1"
edition = "2021"
authors = ["Chris Neely <christopher.neely1200@gmail.com>"]
license = "GPL-3.0"
homepage = "https://github.com/cjneely10/affinityprop"
repository = "https://github.com/cjneely10/affinityprop"
description = """
Vectorized and Parallelized Affinity Propagation
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.4", features = ["rayon"] }
rayon = "1.5"
clap = "~2.27.0"
num-traits = "0.2.14"

[dev-dependencies]
tempfile = "3"
